<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myBackground"
    tools:context=".RegisterActivity"
    tools:ignore="HardcodedText,Autofill">

    <EditText
        android:id="@+id/year_edit_text"
        android:layout_width="85dp"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="@string/year"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/month_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/month_edit_text"
        app:layout_constraintTop_toTopOf="@+id/month_edit_text"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/month_edit_text"
        android:layout_width="112dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/month"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/username_edit_text"
        app:layout_constraintEnd_toStartOf="@+id/year_edit_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/day_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/last_name_edit_text" />

    <EditText
        android:id="@+id/day_edit_text"
        android:layout_width="66dp"
        android:layout_height="49dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/day"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/month_edit_text"
        app:layout_constraintEnd_toStartOf="@+id/month_edit_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/month_edit_text" />

    <EditText
        android:id="@+id/last_name_edit_text"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/LASTNAME"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/month_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/first_name_edit_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/first_name_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/first_name_edit_text" />

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/first_name_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <EditText
        android:id="@+id/first_name_edit_text"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/NAME"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/last_name_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/title_text_view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/title_text_view"
        app:layout_constraintTop_toBottomOf="@+id/title_text_view" />

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/password_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/last_name_edit_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/last_name_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/month_edit_text" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/save_button"
        app:layout_constraintEnd_toEndOf="@+id/username_edit_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/username_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/username_edit_text" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:text="Register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password_edit_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/password_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text" />

</androidx.constraintlayout.widget.ConstraintLayout>